# sr_rewind_cot

./: .gitignore  Aether_v2.8.py  README.md  spiral_patapi_bridge_core.py  sr_rewind_cot.py  sr_rewind_cot_metrics.py  sr_rewind_cot_trace_matrix.py
docs/: README.md  bad_converse_ablation_v1.md  closed_answer_reasoning_v1.md  core_certificate_phase1.md  general_reasoning_speculative_v1.md  general_reasoning_text_mode.md  plot_field_guide.md  roadmap.md  syllogism_interference_matrix_v1.md  syllogism_trace_interference_v1.md
metaphor_harness/: .gitignore  README.md  pyproject.toml  requirements.txt
metaphor_harness/config/: providers.mock.json  providers.openai.json  providers.openai_compatible.example.json
metaphor_harness/data/: expressive_seeds.jsonl  seeds.jsonl
metaphor_harness/docs/: expressive_judge_validation.md
metaphor_harness/metaphor_harness/: cli.py  db.py  eval_rules.py  io_utils.py  prompts.py  providers.py  report.py  runner.py  schema.py
metaphor_harness/tests/: test_harness.py
sr_rewind_cot_assets/: README.md
sr_rewind_cot_assets/prompts/: bridge_answer.txt  bridge_middle.txt  reanswer_from_prefix.txt  rewind_answer_forward.txt  rewind_answer_reverse.txt  rewind_step.txt  rewind_step_text.txt  trace_masked.txt  trace_masked_text.txt  trace_unmasked.txt  trace_unmasked_text.txt
sr_rewind_cot_assets/question_sets/: README.md  closed_answer_reasoning_v1_text_micro.yaml  general_reasoning_observation_v1.yaml  general_reasoning_observation_v1_fast.yaml  general_reasoning_observation_v1_full.yaml  (+6 more)
tests/: test_sr_rewind_cot.py
(+24 files in other folders)
