[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metaphor-harness"
version = "0.1.0"
description = "Metaphoric stance and relational mapping benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryō" }]
dependencies = []

[project.scripts]
metaphor-harness = "metaphor_harness.cli:main"

[tool.setuptools.packages.find]
include = ["metaphor_harness*"]
